Fix navbar alignment
Removed margin property as it was causing unwanted whitespace on the
right side of the page . Added gap property instead to align the navbar.

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 0 -70px;
+    gap: 160px;
 }
 
 ul{
